k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlai-sentiment
  labels:
    name: mlai-sentiment
    app: mlai-stack
